# Slint_Project

./: .gitignore  CMakeLists.txt  ReadMe.md
assets/: wordlist.txt
lib/: CMakeLists.txt  GameController.cpp  GameController.h  GameSettings.cpp  GameSettings.h  HangmanLogic.cpp  HangmanLogic.h  NavigationController.cpp  NavigationController.h  Views.h  lib.cpp  lib.h
src/: Application.cpp  Application.h  main.cpp
test/: createUI.slint
ui/: MainFrame.slint  MainWindow.slint  gallows.slint  game.slint  home.slint  settings.slint  types.slint  ui.slint
